<resources>
    <string name="app_name">Tugas</string>
    <string name="judul">PENDAFTARAN</string>
    <string name="alamat">Alamat</string>
    <string name="namadpn">Nama Depan</string>
    <string name="namablkng">Nama Belakang</string>
    <string name="lahir">Tempat Lahir</string>
    <string name="tglahir">Tanggal Lahir</string>
    <string name="tlp">Telepon</string>
    <string name="em">Email</string>
    <string name="pw1">Password</string>
    <string name="pw2">Masukkan Password Kembali</string>
    <string name="jnsklmn">Jenis Kelamin</string>
    <string name="lk">Laki Laki</string>
    <string name="pr">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="islam">Islam</string>
    <string name="kristen">Kristen</string>
    <string name="katholik">Katholik</string>
    <string name="hindu">Hindu</string>
    <string name="budha">Buddha</string>
    <string name="khhucu">KongHucu</string>
    <string name="AK">Aliran Kepercayaan</string>
    <string name="kembl">kembali</string>
    <string name="dftr">Daftar</string>
</resources>
