<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51C5D81B"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="398dp"
            android:layout_height="715dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#B41BD8B2"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="italic"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textColor="@color/login"
                android:text="@string/judul"
                android:layout_marginTop="50dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="197dp"
                        android:layout_height="match_parent"
                        android:hint="@string/namadpn" />

                    <EditText
                        android:layout_width="194dp"
                        android:layout_height="match_parent"
                        android:hint="@string/namablkng" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/lahir" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/tglahir" />

                </TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:hint="@string/alamat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/jnsklmn"
                    android:textSize="17sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:text="@string/lk"
                        android:textColor="@color/txt" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/pr"
                        android:textColor="@color/txt"/>

                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/agama"
                    android:textSize="18sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:text="@string/islam"
                        android:textColor="@color/txt" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/kristen"
                        android:textColor="@color/txt" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:text="@string/katholik"
                        android:textColor="@color/txt" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/hindu"
                        android:textColor="@color/txt" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:text="@string/budha"
                        android:textColor="@color/txt" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/khhucu"
                        android:textColor="@color/txt" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:text="@string/AK"
                        android:textColor="@color/txt" />

                </TableRow>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/tlp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/em"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pw1"
                    android:inputType="textPassword">

                    <requestFocus />

                </EditText>

                <EditText
                    android:id="@+id/txtPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pw2"
                    android:inputType="textPassword">

                    <requestFocus />

                </EditText>

                <TableRow>

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#A4D1A9"
                        android:padding="20dp"
                        android:text="@string/kembl"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#A4D1A9"
                        android:padding="20dp"
                        android:text="@string/dftr"
                        android:textColor="#000000" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>